--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-351.4KB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-238.1KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
+  - {name: 🇻🇳 越南-6.03MB/s(Youtube:不良林), server: 103.173.255.127, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
   - {name: 未知国家-226.5KB/s(Youtube:不良林), server: 103.186.187.52, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-331.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-430.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-364.0KB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-336.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-238.1KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
   - {name: 🇺🇸 美国-377.8KB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
   - {name: 🇫🇷 法国-1.09MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-301.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 未知国家-654.5KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇦🇺 澳大利亚-916.2KB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-351.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
       - 未知国家-226.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-377.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 未知国家-654.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-351.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
       - 未知国家-226.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-377.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 未知国家-654.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-351.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
       - 未知国家-226.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-377.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 未知国家-654.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-351.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
       - 未知国家-226.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-377.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 未知国家-654.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-351.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
       - 未知国家-226.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-377.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 未知国家-654.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-351.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
       - 未知国家-226.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-377.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 未知国家-654.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-351.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
       - 未知国家-226.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-377.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 未知国家-654.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
