--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-365.1KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇺🇸 美国-330.9KB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
+  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-776.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-289.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.65MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-8.16MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-406.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-825.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-954.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-224.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 未知国家-1.67MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇺🇸 美国-333.7KB/s(Youtube:不良林), server: rbzz.jddsb.cf, port: 1003, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: rbzz.jddsb.cf}}
+  - {name: 🇯🇵 日本-1.42MB/s(Youtube:不良林), server: 152.69.193.245, port: 80, type: vmess, uuid: 6697776b-d009-413b-8708-822ee2e02515, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.193.245}}
+  - {name: 🇺🇸 美国-900.2KB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 未知国家-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 未知国家-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 未知国家-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 未知国家-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 未知国家-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 未知国家-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-825.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 未知国家-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
